--- a/binary/Cargo.toml
+++ b/binary/Cargo.toml
@@ -10,4 +10,5 @@ clap = "2.33"
 image = "0.23"
 colored = "2"
 rayon = "1.5"
-image-of-images-creator = { path = "../library" }
+image-of-images-creator = { path = "../library", features = ["ocv"] }
+opencv = "0.53"
